Item3274: fix to stop firefox cutting off bottom pixels of texts in the left bar
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN@12234 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/style.css
+++ b/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/style.css
@@ -75,7 +75,7 @@ h1 {
 }
 h1 { font-size:210%; }
 h2 { font-size:150%; }
-h3 { font-size:135%; font-weight:bold; }
+h3 { font-size:130%; font-weight:bold; }
 h4 { font-size:122%; font-weight:bold; }
 h5 { font-size:110%; font-weight:bold; }
 h6 { font-size:95%; font-weight:bold; }
@@ -607,7 +607,6 @@ a.twikiLinkInHeaderRight {
 	padding:.5em .1em .5em .3em;
 	margin:0 0 0 -.3em;
 	width:100%;
-	overflow:hidden;
 }
 #patternLeftBarContents li,
 #patternLeftBarContents .twikiHierarchicalNavigation {
@@ -616,7 +615,7 @@ a.twikiLinkInHeaderRight {
 }
 html>body #patternLeftBarContents li,
 html>body #patternLeftBarContents .twikiHierarchicalNavigation { /* Mozilla */
-	overflow-y:visible;
+	overflow:visible;
 }
 
 .twikiHierarchicalNavigation ul {
